chore: made some cleanup and implemented createUser controller
