# cmd/api/auth.go
@@ -1,0 +1,75 @@
+package main
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+	"github.com/puremike/pcourierds/internal/models"
+	"golang.org/x/crypto/bcrypt"
+)
+
+type createUserRequest struct {
+	Username        string `json:"username" binding:"required"`
+	Email           string `json:"email" binding:"required,email"`
+	Password        string `json:"password" binding:"required,min=8"`
+	ConfirmPassword string `json:"confirm_password" binding:"required,min=8"`
+}
+
+type userResponse struct {
+	ID       string `json:"id"`
+	Username string `json:"username"`
+	Email    string `json:"email"`
+	Role     string `json:"role"`
+}
+
+// CreateUser godoc
+//
+//	@Summary		Create user
+//	@Description	Create a new user
+//	@Tags			Users
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		createUserRequest	true	"User payload"
+//	@Success		200		{object}	userResponse
+//	@Failure		400		{object}	error
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/auth/signup [post]
+func (app *application) CreateUser(c *gin.Context) {
+
+	var payload createUserRequest
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	if payload.Password != payload.ConfirmPassword {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "passwords do not match"})
+		return
+	}
+
+	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(payload.Password), bcrypt.DefaultCost)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	user := models.User{
+		Username: payload.Username,
+		Email:    payload.Email,
+		Role:     "user",
+		Password: string(hashedPassword),
+	}
+
+	if err := app.store.Users.CreateUser(c.Request.Context(), &user); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusCreated, userResponse{
+		ID:       user.ID,
+		Username: user.Username,
+		Email:    user.Email,
+		Role:     user.Role,
+	})
+
+}
